[project]
name = "opensqm"
description = "opensqm"
license = "MIT"
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Finlay MacLean"}]
requires-python = ">=3.12,<3.14"
dependencies = [
    "loguru",
    "pandas",
    "numpy",
    "tqdm",
    "wget",
    "rdkit",
    "unipka",
    "rdsl",
    "pydantic",
    "xxhash>=3",
    "ray[default]",
    "scikit-learn",
    "pymbar",
    "click",
    "scipy",
    "pyyaml",
    "sqlitedict>=2.1.0",
    "openmm>=8.5.1", "pypdf>=6.13.2,<7",
    "propka",
    "cloudpathlib[s3]"
]

[project.scripts]
opensqm = "opensqm.cli:cli"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
mopac = "*"
pdbfixer = "*"
openff-toolkit = "*"
openff-nagl = "*"
openff-nagl-models = "*"
openmmforcefields = "*"
openff-bespokefit = "*"
pydantic-units = "*"
xtb-python = "*"
ambertools = "*"
mdtraj = "*"
pymbar = "<4"
xmltodict = ">=1.0.2,<2"
pytest = ">=9.0.3,<10"
openmm-ml = "*"
mdtop = "*"
pytorch = ">=2.4"

[tool.pixi.pypi-dependencies]
opensqm = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="ty check --exclude '*.ipynb'" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pre-commit>=4.2",
    "deptry",
    "ty"
]

[tool.ty.analysis]
# OpenMM stack is a Pixi/conda dependency; uv's default venv often lacks these packages.
allowed-unresolved-imports = ["openmm", "openmm.**", "openmmforcefields", "openmmforcefields.**", "pdbfixer", "pdbfixer.**", "simtk", "simtk.**"]

[tool.pyrefly]
python-interpreter = ".pixi/envs/default/bin/python"

[tool.pyrefly.errors]
missing-attribute = false
unsupported-operation = false
missing-module-attribute = false

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
extend-select = [
    "ANN", # Type annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PTH123", # Avoid builtin open: https://docs.astral.sh/ruff/rules/builtin-open/
    "W505", # Docstring line too long: https://docs.astral.sh/ruff/rules/doc-line-too-long/
    "RET504", # Unnecessary assignment before return statement: https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "PIE790", # Unnecessary pass statement
]
ignore = [
    "N806", # Non-lowercase variable in function (local scientific vars, e.g. kT)
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value used in comparison — too noisy for scientific/test code
    "PLC0415", # `import` should be at top-level — deliberate lazy imports (heavy/optional deps, circular-import avoidance)
]

[tool.ruff.lint.isort]
known-first-party = ["opensqm"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates annotations at runtime (to build validators), so imports
# used only in model field types must stay at runtime, not move into a
# TYPE_CHECKING block. Without this, flake8-type-checking (TCH) would hide those
# imports and Pydantic would fail to resolve the forward reference at runtime.
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"scripts/sqm.py" = ["N815"]

# Dynamically typed expressions (typing.Any) are allowed in the library.
"opensqm/**" = ["ANN401"]

# One-off scripts and tests don't need docstrings or full type annotations.
"scripts/**" = [
    "D",      # Docstring rules
    "ANN001", # Missing type annotation for function argument
    "ANN003", # Missing type annotation for **kwargs
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method
    "ANN206", # Missing return type annotation for class method
    "TCH001", # Move first-party imports into a type-checking block
    "TCH002", # Move third-party imports into a type-checking block
    "TCH003", # Move standard library imports into a type-checking block
    "ARG001", # Unused function argument
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
]
"tests/**" = [
    "D",      # Docstring rules
    "ANN001", # Missing type annotation for function argument
    "ANN003", # Missing type annotation for **kwargs
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method
    "ANN206", # Missing return type annotation for class method
    "TCH001", # Move first-party imports into a type-checking block
    "TCH002", # Move third-party imports into a type-checking block
    "TCH003", # Move standard library imports into a type-checking block
    "ARG001", # Unused function argument
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests", "opensqm"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.deptry.per_rule_ignores]
DEP001 = ["openmm", "openmmforcefields", "openff", "mdtraj", "pytraj", "pdbfixer"]

[tool.uv.sources]
unipka = { git = "https://github.com/finlayiainmaclean/unipka.git" }
